--- a/cpt.html
+++ b/cpt.html
@@ -32,7 +32,7 @@
 	var state = 'CPTinstructions1'; 
 
 	$(window).keypress(function(e) {
-		if ((e.keyCode == 32) && (current==7)) { // space
+		if (e.keyCode == 32) { // space
 			CPTspacePressed();
 		}
 	});
